syntax = "proto3";

package xwork;

option go_package = "./;xworkpb";

// import "google/protobuf/timestamp.proto";

service UserService {
  rpc getUser (UserId) returns (User);
}

message UserId {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  // google.protobuf.Timestamp birthDate = 4;
  // enum role = 5;
}
